#
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#

[package]
name = "perf-network-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
fern = "0.6.2"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.4.0"
log = "0.4"
prometheus_exporter = "0.8"
serde = { version = "1.0.179", features = ["derive"] }
serde-env = "0.1.0"
tokio = { version = "1.26.0", features = ["full"] }

[[example]]
name = "http_server"
path = "examples/http_server.rs"

[[example]]
name = "tcp_server"
path = "examples/tcp_server.rs"

[[example]]
name = "udp_server"
path = "examples/udp_server.rs"
